public/frontend/css/stylesheet.css
body {

}

/* Login */
button#loginButton {
    opacity: 0.9;
}

span#loginError {
    color: red;
    text-align: center;
    font-weight: bold;
    margin-top: 5px;
}
.login-box {
	width: 91%;
	height: auto;
	min-height: 400px;
	background: #FFDEAE;
	border: 10px solid white;
	margin-top: 30px;
	margin-left: auto;
	margin-right: auto;
	overflow: hidden;
}
.login-card {
	width: 60%;
	margin-top: 100px;
	margin-left: 20%;
}
.login-card #loginError {
	margin-left: 30%;
}
.input-field {
	width: 40%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
}
.input-field label {
	margin-top: 10px;
	margin-bottom: 5px;
	float: left;
	margin-left: -100px;
}

.input-form {
	height: 40px;
	width: 100%;
	border-radius: 4px;
    border-width: 0px;
    padding-left: 20px;
}
.submit-button {
	width: 20%;
	margin-top: 24px;
	margin-left: auto;
	margin-right: auto;
}
.login-button {
	height: 40px;
	width: 100%;
	border-radius: 4px;
	border-width: 0px;
	color: white;
	background-color: #FF9800;
	box-shadow: px 2px 5px grey;
}

.help-box {
	width: 15%;
	height: 140px;
	float: right;
}

.help-box div {
	width: 100%;
	height: 80%;
	margin-top: 10%;
	margin-left: auto;
	margin-right: auto;
	color: #DE8600;
	text-align: center;
}
.help-box div img {
	width: 30%;
	margin-bottom: 10px;
}

/* Sign Up */

.signup-box {
	width: 91%;
	height: auto;
	min-height: 400px;
	background: #FFDEAE;
	border: 10px solid white;
	margin-top: 30px;
	margin-left: auto;
	margin-right: auto;
	overflow: hidden;
}
.card-body {
	width: 60%;
	margin-left: 20%;
}

.input-field {
	width: 40%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 50px;
}
.input-field div {
	margin-top: 0px;
	margin-bottom: 5px;
	float: left;
	margin-left: -150px;
}
.input-field div .br {
    display: block;
    margin-bottom: -1em;
}
.option {
	color: rgba(0, 0, 0, 0.5);
	clear: both;
}

.input-form {
	width: 100%;
	height: 40px;
	border-radius: 4px;
	border-width: 0px;
}

.submit-button {
	width: 20%;
	margin-top: 24px;
	margin-left: auto;
	margin-right: auto;
}

.container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  float: left;
}

/* Hide the browser's default radio button */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

/* Create a custom radio button */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  border-radius: 50%;
  border: 2px solid grey;
  background-color: white;
}


/* When the radio button is checked, add a blue background */
.container input:checked ~ .checkmark {

}

/* Create the indicator (the dot/circle - hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the indicator (dot/circle) when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the indicator (dot/circle) */
.container .checkmark:after {
 	top: 3px;
	left: 3px;
	width: 15px;
	height: 15px;
	border-radius: 50%;
	background: #FF9800;
}


.sign-button {
	height: 40px;
	width: 100%;
	border-radius: 4px;
	border-width: 0px;
	color: white;
	background-color: #FF9800;
	box-shadow: px 2px 5px grey;
}

.help-box {
	width: 15%;
	height: 140px;
	float: right;
	margin-top: -11%;
}
.help-box img {
	width: 20%;
	margin-bottom: 10px;
}
.help-box div {
	width: 50%;
	height: 100%;
	margin-left: auto;
	margin-right: auto;
	color: #DE8600;
	text-align: center;
}
.help-box div img {
	width: 60%;
	margin-bottom: 10px;
}


/* Menu */
.page_wrapper {
	max-width: 100%;
	height: auto;
	min-height: 750px;
	background: #FFF6EA;
	margin-left: auto;
	margin-right: auto;
}

.header {
	width: 100%;
	height: 160px;
	background: #FFFFFF;
}
.logo-field {
	width: 25%;
	height: 140px;
	float: left;
}
.logo-field img {
	width: 38%;
	margin-left: 20%;
	margin-top: 5%;
}

.nav-bar {
	width: 45%;
	height: 115px;
	float: left;
	margin-top: 50px;
}
.account {
	width: 30%;
	height: 115px;
	float: left;
}
.social {
	width: 100%;
	height: 50%;
}
.social img {
	float: right;
	width: 10%;
	margin-right: 5%;
}
.acc {
	width: 100%;
	height: 50%;
}
.signup-acc {
	width: 40%;
	height: auto;
	padding: 10px;
	color: white;
	text-align: center;
	background: #FF9800;
	float: right;
	border-radius: 4px;
	border-width: 0px;
	margin-right: 5%;
}
.login-acc {
	width: 35%;
	height: auto;
	padding: 10px;
	color: black;
	text-align: center;
	float: left;
	margin-left: 15%;
}
input:focus, textarea:focus, select:focus{
        outline: none;
    }
/*!* The container <div> - needed to position the dropdown content *!*/
.menu.dropdown {
    position: relative;
    display: inline-block;
    padding-top: 10px;
    margin-left: 20%;
}
.menu.dropdown.name {
    margin-left: 30px;
}

.menu.dropdown.name a h1 {
    color: black;
    font-size: 20px;
}

.catego {
    width: 100%;
    height: auto;
    color: black;
    font-size: 30px;
    font-weight: 10;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    width: 10%;
    display: none;
    position: fixed;
    background-color: #ffbc58;
    z-index: 9999;
    border-radius: 5px;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.notify {
    min-width: 20px;
    float: right;
    margin-top: -5px;
    background-color: red;
    border-radius: 50%;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #FF9800;
    border-radius: 5px;
}

/* Show the dropdown menu on hover */
.menu.dropdown:hover .dropdown-content {
    display: block;
}

ul.menu{
    text-align: center;
    height: 70px;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #4a3d20;
}
/* ... */

